<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DrinkActivity">

    <TextView
        android:id="@+id/drinkName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="40sp"
        android:textColor="#B10F0F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:scaleX="2"
        android:scaleY="2"
        app:srcCompat="@drawable/coca_orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drinkName"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/drinkPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="#B10F0F"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drinkName"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/drinkDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"/>

    <Button
        android:id="@+id/buttonBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/commander"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:padding="10sp"
        android:layout_margin="20sp"
        android:outlineProvider="bounds"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/Cpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textColor="@color/black"
        android:layout_marginBottom="20sp"
        android:textSize="30sp"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/ButtonAdd"
        android:text="@string/plus"
        android:textColor="@color/black"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        app:layout_constraintLeft_toRightOf="@id/ButtonMinus"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/ButtonMinus"
        android:text="@string/minus"
        android:textColor="@color/black"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:layout_margin="20sp"
        app:layout_constraintLeft_toRightOf="@id/Cpt"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>