<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_capitulatif_de_votre_commande"
        android:textSize="25sp"
        android:textColor="#B10F0F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/imgV"
        app:srcCompat="@drawable/coca_classique"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:contentDescription="@string/TODO" />

    <TextView
        android:id="@+id/order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/imgV"
        app:layout_constraintTop_toTopOf="@id/imgV" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgV"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:text="@string/n_oubliez_pas_de_mettre_votre_v_te_sur_cette_boisson"
        android:textSize="20sp"
        android:textColor="#B10F0F"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total"
        android:layout_marginTop="75dp"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressBackgroundTint="@color/rating_bar_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating"
        android:layout_marginTop="30dp" />


    <Button
        android:id="@+id/confirm_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmer_l_achat"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        android:padding="10sp"
        android:layout_margin="20sp"
        android:outlineProvider="bounds"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>